--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -1,4 +1,8 @@
 #intro {
+  background-image: url(./../../img/images/Violet_top_left_wave.png);
+  background-size: contain;
+  height: 100%;
+  background-position: top;
   .card {
     border-radius: 10px;
     overflow: hidden;
